--- a/2.NLP_PREP/2.2.sklearn.ipynb
+++ b/2.NLP_PREP/2.2.sklearn.ipynb
@@ -393,7 +393,7 @@
     "print(tfidf_vectorizer.vocabulary_)\n",
     "\n",
     "sentence = [text_data[3]] # ['점심 먹고 공부 해야지']\n",
-    "print(tfidf_vectorizer.transform(text_data).toarray())"
+    "print(tfidf_vectorizer.transform(sentence).toarray())"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
