fix a code bug and add instruction comments

--- a/8.GPT3/8.4.gpt2_p_tuning_NSMC.ipynb
+++ b/8.GPT3/8.4.gpt2_p_tuning_NSMC.ipynb
@@ -16,7 +16,11 @@
    },
    "source": [
     "## 환경 준비\n",
-    "(Google Colab 환경에서 사용하세요)"
+    "(Google Colab 환경에서 사용하세요)\n",
+    "\n",
+    "**설치 후 Colab 또는 Jupyter 노트북 런타임 또는 커널 환경을 반드시 재시작 해주세요.\n",
+    "\n",
+    "(numpy 버전 이슈로 인해 설치후 바로 실행할 시 tensorflow 학습 시작전에 에러가 발생합니다.)"
    ]
   },
   {
@@ -32,8 +36,7 @@
    "outputs": [],
    "source": [
     "!wget https://raw.githubusercontent.com/NLP-kr/tensorflow-ml-nlp-tf2/master/requirements.txt -O requirements.txt\n",
-    "!pip install -r requirements.txt\n",
-    "!pip install tensorflow==2.2.0"
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -207,7 +210,7 @@
     "        last_hidden_states, _ = self.gpt2({'inputs_ids': None, 'inputs_embeds': inputs_embeds, 'attention_mask': attention_mask})\n",
     "        output = last_hidden_states[:, -1, :]\n",
     "\n",
-    "        return outputs"
+    "        return output"
    ]
   },
   {
